# rpg_game_bot

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  promocodes_example.txt  pyproject.toml
bot/: __main__.py
bot/application/: __init__.py  states.py
bot/application/dialogs/: __init__.py
bot/application/dialogs/admin_dialog/: __init__.py  dialog.py  filters.py  getters.py  handlers.py
bot/application/dialogs/mailing_dialog/: __init__.py  dialog.py  getters.py  handlers.py
bot/application/dialogs/menu_dialog/: __init__.py  dialog.py  getters.py  handlers.py
bot/application/handlers/: commands_handler.py
bot/core/: enums.py
bot/core/config/: config.py  models.py
bot/core/dto/: user.py
bot/core/providers/: __init__.py  base_provider.py  i18n_provider.py  repository_providers.py  service_provider.py
bot/infrastructure/middlewares/: i18n_middleware.py  register_middleware.py
bot/infrastructure/migrations/: env.py
bot/infrastructure/migrations/versions/: ed56779b0d0b_.py
bot/infrastructure/utils/: i18n.py
bot/locales/: stub.pyi
bot/locales/en/LC_MESSAGES/: txt.ftl
bot/locales/ru/LC_MESSAGES/: txt.ftl
bot/repository/implementations/: common_cache_repository.py  user_cache_repository.py  user_repository.py
bot/repository/interfaces/: redis_repository.py  sqlalchemy_repository.py
bot/repository/models/: user.py
bot/services/mailing/: __init__.py  consumer.py  publisher.py
nats/: migrations.py
postgres/: Dockerfile
redis/: redis.conf
